# py-cffi-bridge-npy-and-ocv-demo

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  main.py  pyproject.toml  setup.py
libfoo/: __init__.py
libfoo/algorithm/: CMakeLists.txt  __init__.py  _algorithm.pyi
libfoo/algorithm/include/libfoo/: allocator.h  allocator.hpp  convert.h  convert.hpp  pywrap.h
libfoo/algorithm/src/: allocator.cpp  convert.cpp  lib.c  lib.cpp
