[build-system]
requires = ["scikit-build-core", "numpy"]
build-backend = "scikit_build_core.build"

[project]
name = "libfoo"
description = "Demo about how to bridge Numpy and OpenCV"
authors = [{ name = "Starry-OvO", email = "starry.qvq@gmail.com" }]
urls = { Repository = "https://github.com/Starry-OvO/py-cffi-bridge-npy-and-ocv-demo/" }
version = "0.0.0"
dependencies = ["opencv-python>=4.7"]
requires-python = ">=3.8,<3.13"

[tool.pdm.dev-dependencies]
lint = ["ruff", "black"]

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 120
select = ["W", "E", "F", "I"]
ignore = ["E402", "E501"]
target-version = "py38"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
