[project]
name = "libfoo"
description = "Demo about how to bridge Numpy and OpenCV"
authors = [{ name = "Starry-OvO", email = "starry.qvq@gmail.com" }]
urls = { Repository = "https://github.com/Starry-OvO/py-cffi-bridge-npy-and-ocv-demo/" }
version = "0.0.0"
dependencies = ["opencv-python>=4.7,<5"]
requires-python = ">=3.8,<3.13"

[build-system]
requires = ["scikit-build-core", "numpy"]
build-backend = "scikit_build_core.build"

[tool.rye]
managed = true

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint]
select = ["W", "E", "F", "I", "UP", "YTT", "A", "B", "C4", "PIE", "PT", "PERF", "FURB"]
ignore = ["E402", "E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
